# tinicly

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
tinicly/: __init__.py  __main__.py
